--- a/src/components/begin/startPage.css
+++ b/src/components/begin/startPage.css
@@ -11,12 +11,13 @@
     justify-content: center;
     font-family: 'Liu Jian Mao Cao';
     font-style: normal;
-    font-weight: 400;
     font-size: 90px;
     line-height: 64px;
     color: #FFAFAF;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     margin-bottom: 80px;
+    text-decoration-line: none;
+    font-weight: bold;
 }
 .total-container{
     height : 100%;
@@ -32,6 +33,7 @@
     border-radius: 20px;
     margin-left: 30px;
     margin-right: 30px;
+    text-decoration-line: none;
 }
 .box-container{
     display : flex;
