--- a/src/components/loginjoin/join.css
+++ b/src/components/loginjoin/join.css
@@ -23,6 +23,7 @@
     color: #FFAFAF;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     margin-bottom:50px;
+    text-decoration-line : none;
 }
 .login-container{
     width: 400px;
