[ADD] number key

--- a/src/components/keyboard/EyeKeyboard.css
+++ b/src/components/keyboard/EyeKeyboard.css
@@ -1,6 +1,5 @@
 .eye-keyboard{
-    /* z-index: 5;    */
+    z-index: 10;   
     background-color: pink;
     border-radius: 5px;
-    /* display: flex; */
 }
