--- a/src/pages/Join.css
+++ b/src/pages/Join.css
@@ -66,7 +66,7 @@
 }
 .join-password{
     height : 50%;
-    width: 60%;
+    width: 55%;
     background: #FFFFFF;
     border: 1px solid #B4A5A5;
     border-radius: 24px;
@@ -143,7 +143,7 @@ input[type="checkbox"] {
     cursor: pointer;
     outline: none !important;
     border: 1px solid #eeeeee;
-    border-radius: 2px;
+    border-radius: 10px;
     background: #fbfbfb;
 }
 
@@ -172,4 +172,14 @@ input[type="checkbox"]:checked {
 input[type="checkbox"]:checked::before {
     border-radius: 2px;
     transform: scale(1) translate(-50%, -50%)
+}
+.css-1t1j96h-MuiPaper-root-MuiDialog-paper{
+    align-items: center;
+    height: 66px;
+    justify-content: center;
+    border-radius: 15px !important;
+    font-size: 25px;
+    padding-left: 30px;
+    padding-right: 30px;
+    transition: all 5s;
 }
