[ADD] apply eyeKeyboard in Login & Join page

--- a/src/components/keyboard/EyeKeyboard.css
+++ b/src/components/keyboard/EyeKeyboard.css
@@ -1,6 +1,6 @@
 .eye-keyboard{
-    position: absolute;
-    z-index: 10;   
+    /* width: 440px;
+    height: 180px;
     background-color: pink;
-    border-radius: 5px;
+    border-radius: 5px; */
 }
