--- a/src/pages/StartPage.css
+++ b/src/pages/StartPage.css
@@ -1,9 +1,17 @@
-
-.container {
-    width: 100%;
-    height: 100%;
-    background: #1E1E1E;
+.main-container {
+    background-color: #1E1E1E;
+    width: 100vw;
+    height: 100vh;
 }
+
+.start-page-top-container{
+    display : flex;
+    align-items: center;
+    justify-content: center;
+    width : 100%;
+    height: 20%;
+}
+
 #title{
     width: 100%;
     height: 81px;
@@ -19,51 +27,16 @@
     text-decoration-line: none;
     font-weight: bold;
 }
-.total-container{
-    height : 100%;
+.start-page-body-container{
+    height : 80%;
     display : flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-}
-.box{
-    width: 100%;
-    height: 100%;
-    background: #FFC7C7;
-    border-radius: 20px;
-    margin-left: 30px;
-    margin-right: 30px;
-    text-decoration-line: none;
 }
 .box-container{
     display : flex;
     justify-content: center;
     width: 1300px;
     height:500px;
-}
-.box-in-title{
-    width: 100%;
-    height: 20%;
-    display:flex;
-    justify-content: center;
-    align-items: center;
-    font-family: 'Lilita One';
-    font-style: normal;
-    font-weight: bold;
-    font-size: 40px;
-    line-height: 27px;
-    color: #FFFFFF;
-}
-.box-in-content{
-    width: 100%;
-    height: 70%;
-    display : flex;
-    justify-content: center;
-    align-items: center;
-    font-family: 'Lilita One';
-    font-style: normal;
-    font-weight: bold;
-    font-size: 40px;
-    line-height: 40px;
-    color: #FFFFFF;
 }
