--- a/src/pages/Main.css
+++ b/src/pages/Main.css
@@ -45,12 +45,26 @@
 .canvas-container{
     width: 70%;
     height: 100%;
-    background-color: #d9d9d9;
+    background-color: white;
 }
 
-.detail-container{
+.right-container{
     width: 20%;
     height: 100%;
     background-color: rgb(49, 51, 54);
+}
+
+.cam-container{
+    width: 100%;
+    height: 200px;
+    background-color: gray;
+}
+
+.detail-container{
+    width: 100%;
+    height: calc(100% - 200px);
+    background-color: rgb(49, 51, 54);
+    display: flex;
+    flex-direction: column;
 }
 
