--- a/src/components/keyboard/EyeKeyboard.css
+++ b/src/components/keyboard/EyeKeyboard.css
@@ -1,6 +1,6 @@
 .eye-keyboard{
-    /* width: 440px;
+    width: 440px;
     height: 180px;
-    background-color: pink;
-    border-radius: 5px; */
+    background-color: #1E1E1E;
+    border-radius: 5px;
 }
