--- a/src/pages/Main.css
+++ b/src/pages/Main.css
@@ -45,6 +45,9 @@
 .canvas-container{
     width: 70%;
     height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     background-color: #d9d9d9;
 }
 
