--- a/src/pages/Main.css
+++ b/src/pages/Main.css
@@ -65,6 +65,7 @@
     height: calc(100% - 200px);
     background-color: rgb(49, 51, 54);
     display: flex;
+    color:white;
     flex-direction: column;
 }
 
