--- a/src/pages/CanvasSave.css
+++ b/src/pages/CanvasSave.css
@@ -36,6 +36,7 @@
 }
 .option-text{
     font-size: 20px;
+    font-weight: 700;
     line-height: 30px;
     letter-spacing: 7px;
     margin-left: 10px;
