--- a/src/pages/Main.css
+++ b/src/pages/Main.css
@@ -48,7 +48,9 @@
     /* display: flex;
     align-items: center;
     justify-content: center; */
-    background-color: white;
+    background-color: gray;
+    overflow-x: auto;
+    overflow-y: auto;
 }
 
 .right-container{
