--- a/src/components/atoms/EyeImageCard.css
+++ b/src/components/atoms/EyeImageCard.css
@@ -4,10 +4,11 @@
     margin-left: 5px;
     margin-right: 5px;
     margin-bottom: 10px;
-    background-color: gainsboro;
+    background-color: white;
 }
 
 .picture-information{
     margin-left: 10px;
     margin-bottom: 2px;
+    font-size: 16px;
 }
