--- a/src/pages/Main.css
+++ b/src/pages/Main.css
@@ -49,8 +49,8 @@
     width: 70%;
     height: 100%;
     background-color: gray;
-    overflow-x: hidden;
-    overflow-y: hidden;
+    overflow-x: scroll;
+    overflow-y: scroll;
 }
 
 .right-container{
