--- a/src/components/atoms/EyeCard.css
+++ b/src/components/atoms/EyeCard.css
@@ -1,11 +1,3 @@
-/* .eye-card{
-    width: 100%;
-    height: 100%;
-    background: #FFC7C7;
-    border-radius: 20px;
-    margin-left: 30px;
-    margin-right: 30px;
-} */
 .eye-card-title{
     width: 100%;
     height: 30%;
@@ -19,18 +11,24 @@
     line-height: 40px;
     color: #FFFFFF;
 }
+
+.eye-card-content-contianer{
+    width: 100%;
+    height: 70%;
+}
+
 .eye-card-content{
     width: 80%;
-    height: 70%;
-    text-align: center;
+    height: auto;
+    text-align: left;
     justify-content: center;
     align-items: center;
     font-family: 'Lilita One';
     font-style: normal;
     font-weight: bold;
-    font-size: 40px;
-    line-height: 40px;
+    font-size: xx-large;
     word-break: normal;
     padding-left: 10%;
+    padding-bottom: 2%;
     color: #FFFFFF;
 }
