--- a/src/pages/EyeGallery.css
+++ b/src/pages/EyeGallery.css
@@ -12,11 +12,19 @@
     margin-bottom: 9%;
 }
 
+.gallery-top-buttons{
+    display: flex;
+    width: 20%;
+    height: 100%;
+    align-items: flex-start;
+    padding-top: 1%;
+}
+
 .gallery-title{
-    width: 80%;
+    width: 60%;
     height: auto;
     align-items: center;
-    text-align: center;
+    text-align:center;
     font-family: 'Liu Jian Mao Cao';
     font-style: normal;
     font-weight: bold;
@@ -25,7 +33,6 @@
     color: #FFAFAF;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     text-decoration: none;
-    padding-left: 17%;
 }
 
 .gallery-top-container{
