--- a/src/pages/Information.css
+++ b/src/pages/Information.css
@@ -4,15 +4,15 @@
     height: 100vh;
 }
 
-.start-page-top-container{
+.information-top-container{
     display : flex;
     align-items: center;
     justify-content: center;
     width : 100%;
     height: 20%;
 }
-.start-page-title{
-    width: 75%;
+.information-title{
+    width: 80%;
     height: auto;
     align-items: center;
     text-align: center;
@@ -24,19 +24,13 @@
     color: #FFAFAF;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     text-decoration: none;
+    padding-left: 17%;
 }
-.start-page-cam{
+.information-cam{
     width: 20%;
     height: 15%;
     /* height: auto; */
     margin-bottom: 10%;
-}
-.start-page-buttons{
-    display: flex;
-    width: 5%;
-    height: 100%;
-    align-items: flex-start;
-    padding-top: 1%;
 }
 
 .start-page-body-container{
