[FIX] background animation

--- a/src/pages/Information.css
+++ b/src/pages/Information.css
@@ -1,5 +1,5 @@
 .information-main-container {
-    /* background-color: #1E1E1E; */
+    background-color: #1E1E1E;
     width: 100vw;
     height: 100vh;
 }
