--- a/src/components/atoms/ModifyCard.css
+++ b/src/components/atoms/ModifyCard.css
@@ -13,7 +13,7 @@
 
 .modify-body-container{
     width: 100%;
-    height: calc(100% - 30px);
+    height: auto;
     justify-content: center;
     align-items: center;
     background-color: rgb(249, 245, 245);
@@ -37,7 +37,7 @@
 
 .modify-option{
     width : 100%;
-    height: 20%;
+    height: auto;
     margin-bottom: 4%;
 }
 .other-eyetist-option{
