--- a/src/components/atoms/ModifyCard.css
+++ b/src/components/atoms/ModifyCard.css
@@ -50,7 +50,7 @@
     font-weight: 700;
     line-height: 30px;
     letter-spacing: 7px;
-    font-family: 'Liu Jian Mao Cao';
+    font-family: 'Arita Dotum';
     font-style: normal;
     text-align: left;
 }
@@ -59,7 +59,7 @@
     font-weight: 500;
     margin-bottom: 2px;
     letter-spacing: 7px;
-    font-family: 'Georgia';
+    font-family: 'Arita Dotum';
     font-style: normal;
     text-align: left;
     font-size: 20px;
