[ADD] MuiPaper-root style

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,10 @@ html,body {
   width: 100%;
   height : 100%;
 }
+.MuiPaper-root{
+  height: auto !important;
+  font-size: 30px !important;
+}
 
 .App-logo {
   height: 40vmin;
