--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,11 @@ html,body {
 .MuiPaper-root{
   height: auto !important;
   font-size: 30px !important;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 3px;
+  padding-bottom: 3px;
+  border-radius: 10px;
 }
 
 .App-logo {
